--- a/README.org
+++ b/README.org
@@ -23,6 +23,8 @@ gegevens op <https://druid.datalegend.net/andb> vinden.
 
 Dit repository bevat de volgende directories:
 
+- [[doc][/doc]] :: Documentatie bestanden voor de ANDB dataset.
 - [[img][/img]] :: Afbeeldingen die aspecten van de ANDB dataset toelichten.
+- [[jsf][/jsf]] :: CoW scripts voor de transformatie van de ANDB dataset naar linked data.
 - [[rdf][/rdf]] :: Statische RDF bestanden die deel uitmaken van de ANDB
   dataset.
