--- a/validatie/README.org
+++ b/validatie/README.org
@@ -4,7 +4,7 @@ Deze directorie bevat code waarmee de ANDB linked data automatisch gevalideerd k
 
 ** Installatie
 
-Installeer [[Node.js][https://nodejs.org]] en [Yarn](https://yarnpkg.com).
+Installeer [[Node.js][https://nodejs.org]] en [[Yarn][https://yarnpkg.com]].
 
 Voer de volgende commando's uit om met Yarn de benodigde afhankelijkheden te installeren:
 
