DOC: CoW steps.

--- a/jsf/README.org
+++ b/jsf/README.org
@@ -16,9 +16,11 @@ Verdere commentaar op het werk aan deze files en de issues die zich daarbij voor
 
 De CoW transformatie kan op de volgende manier worden uitgevoerd:
 
-#+begin_src sh
-cow_tool convert FILE
-#+end_src
+  1. Installeer CoW.
+
+  2. Download de CSV bronbestanden die op [[https://druid.datalegend.net/andb/andb2/assets][deze locatie]] gepubliceerd zijn.
+
+  3. Voer het volgende commando uit: ~cow_tool convert FILE.csv~  Het is belangrijk dat het bronbestand ~FILE.csv~ correspondeert met een configuratie bestand ~FILE.csv-metadata.json~.
 
 * Personen dataset
 
